--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hey there! how r u?</title>
+    <title>News</title>
 </head>
 <body>
-    
+    <header>
+        <h1>News</h1>
+        <p>Local and National News</p>
+    </header>
 </body>
 </html>
