--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
         <h1>News</h1>
         <p>Local and National News</p>
     </header>
+    <nav>
+        <li><a href=""></a>Home</li>
+        <li><a href=""></a>Archives</li>
+        <li><a href=""></a>About</li>
+    </nav>
 </body>
 </html>
