added local news

--- a/index.html
+++ b/index.html
@@ -15,5 +15,19 @@
         <li><a href=""></a>Archives</li>
         <li><a href=""></a>About</li>
     </nav>
+        
+    <main>
+        <section>
+            <h2>Local News</h2>
+            <article>
+                <header>
+                    <h3>Fire fighters rescue man from building</h3>
+                    <p>(author, date)</p>
+                </header>
+                <p>This is the story text. This is the story text</p>
+                <p>This is the story text. This is the story text</p>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
