added national news and footer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
                 <p>This is the story text. This is the story text</p>
             </article>
         </section>
+        <section>
+            <h2>National News</h2>
+            <article>
+                <header>
+                    <h3>Snow storm is making travel difficult</h3>
+                    <p>(author, date)</p>
+                </header>
+                <p>This is the story text. This is the story text</p>
+                <p>This is the story text. This is the story text</p>
+            </article>
+        </section>
     </main>
+
+    <footer>
+        <p>This is the footer information</p>
+    </footer>
 </body>
 </html>
