added aside element

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </section>
     </main>
 
+    <aside>
+        <h2>Be a news reporter</h2>
+        <p>If you see a new happening - Send us a text</p>
+    </aside>
+
     <footer>
         <p>This is the footer information</p>
     </footer>
