--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="banner">
         <h1>News</h1>
         <p>Local and National News</p>
     </header>
     <nav>
-        <li><a href=""></a>Home</li>
-        <li><a href=""></a>Archives</li>
-        <li><a href=""></a>About</li>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="archives.html">Archives</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
     </nav>
         
     <main>
